dataset1235/2025-2/2318198438/users/1018361269/executions/2601575092_359632665.log
== SUBMISSION (2025-08-13 14:25:10)
-- CODE: 
numb= 250/6
print("cada um deve pagar" ,round(numb, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
cada um deve pagar 41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
cada um deve pagar 41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 00:06:43)
-- CODE: 
numb= 250/6
print("cada um deve pagar" ,round(numb, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
cada um deve pagar 41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
cada um deve pagar 41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:25:07)
-- CODE: 
numb= 250/6
print("cada um deve pagar" ,round(numb, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
cada um deve pagar 41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
cada um deve pagar 41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:30:49)
-- CODE: 
numb= 250/6
print("cada um deve pagar" ,round(numb, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
cada um deve pagar 41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
cada um deve pagar 41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:23:02)
-- CODE: 
numb= 250/6
print("cada um deve pagar"(numb,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:2: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("cada um deve pagar"(numb,2))
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("cada um deve pagar"(numb,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:2: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("cada um deve pagar"(numb,2))
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("cada um deve pagar"(numb,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:24:08)
-- CODE: 
numb= 250/6
print("cada um deve pagar" ,(numb 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 2
    print("cada um deve pagar" ,(numb 2))
                                 ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 2
    print("cada um deve pagar" ,(numb 2))
                                 ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:24:20)
-- CODE: 
numb= 250/6
print("cada um deve pagar" ,(numb, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
cada um deve pagar (41.666666666666664, 2)
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
cada um deve pagar (41.666666666666664, 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:23:36)
-- CODE: 
numb= 250/6
print("cada um deve pagar" numb,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 2
    print("cada um deve pagar" numb,2)
          ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 2
    print("cada um deve pagar" numb,2)
          ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
